# vice-core

./: F4b-INTEGRATION.md  MERGE-ANALYSIS.md  README-VICE-CORE.md  configure.ac
.woodpecker/: build-engine.yaml  build-macos-mcp.yaml  build-macos.yaml
data/C128/: Makefile.am  macos_pos.vkm  macos_sym.vkm
data/C64/: Makefile.am  macos_pos.vkm  macos_sym.vkm
data/PET/: macos_bude_pos.vkm  macos_bude_pos_de.vkm  macos_bude_sym.vkm  macos_bude_sym_de.vkm  macos_buuk_pos.vkm  macos_buuk_pos_de.vkm  macos_buuk_sym.vkm  macos_buuk_sym_de.vkm  macos_grus_pos.vkm  macos_grus_pos_de.vkm  macos_grus_sym.vkm  macos_grus_sym_de.vkm  macos_pos.vkm  macos_sym.vkm
data/PLUS4/: Makefile.am  macos_pos.vkm  macos_sym.vkm
data/VIC20/: Makefile.am  macos_pos.vkm  macos_sym.vkm
data/joymaps/: sdl_joymap_xbox_one_windows.vjm
src/: Makefile.am  autostart-prg.c  c1541-stubs.c  log.c  mainc64cpu.c  maincpu.h  monitor.h  sound.c  vice.h
src/arch/: Makefile.am
src/arch/headless/: mousedrv.c
src/arch/macos/: Makefile.am  archdep.h  hotkeys.c  joystick.c  kbd.c  kbd.h  main.c  mainexit.c  ui.c  ui.h  uistatusbar.c  vicemacbridge.c  vicemacbridge.h  video.c  videoarch.h  vsidui.c  vsyncarch.c
src/arch/shared/: Makefile.am  (+1 more)
src/c128/: c128-cmdline-options.c
src/c64/: vsid-stubs.c
src/c64dtv/: c64dtv-stubs.c
src/fsdevice/: fsdevice-filename.c  fsdevice-filename.h  fsdevice-flush.c  fsdevice-open.c  fsdevice-read.c  fsdevice.c  fsdevicetypes.h
src/joyport/: mouse.c
src/mcp/: .gitignore  README.md  mcp_server.c  mcp_server.h  mcp_tools.c  mcp_tools.h  mcp_tools_input.c  mcp_tools_internal.h  mcp_tools_memory.c  mcp_tools_protocol.c  mcp_tools_snapshot.c  mcp_transport.c  mcp_transport.h
src/monitor/: mon_parse.c  monitor.c  montypes.h
src/plus4/: plus4-stubs.c
src/rs232drv/: rs232net.c
src/sid/: residfp.cc  sid-cmdline-options.h  sid.c
src/userport/: userport_rtc_ds1307.c  userport_rtc_ds1307.h
(+8 files in other folders)
